Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <a id="util" class="anchor" href="#util" aria-hidden="true"><span class="octicon octicon-link"></span></a>util<a href="https://travis-ci.org/websudos/util"><img src="https://travis-ci.org/websudos/util.svg?branch=develop" alt="Build Status"></a>
 </h1>
 
-<p>The latest available version of the util library is <code>val UtilVersion = 0.4.0</code>. This library is only deployed to our managed Maven repository,
-available at <code>http://maven.websudos.co.uk</code>. It is publicly available.</p>
+<p>The latest available version of the util library is <code>val UtilVersion = 0.6.0</code>. This library is only deployed to our managed Maven repository,
+available at <code>http://maven.websudos.co.uk</code>. It is publicly available, for both Scala 2.10.x and Scala 2.11.x.</p>
 
-<p><img src="http://websudos.com/images/work/util.png" alt="Util" title="Websudos Util"></p>
+<p><img src="https://s3-eu-west-1.amazonaws.com/websudos/oss/logos/util.png" alt="Util" title="Websudos Util"></p>
 
 <h3>
 <a id="table-of-contents" class="anchor" href="#table-of-contents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Table of contents</h3>
